# cs395-examples

./: .gitignore
00-Foundational-Concepts/Arrays-CPP/: arrayDemo
00-Foundational-Concepts/Classes-Composition-Rust/src/: main.rs
00-Foundational-Concepts/Command-Line-Args-CPP/: demo
00-Foundational-Concepts/Templates-Generics-CPP/: templateDemo
00-Rust-Logging/: Cargo.toml
00-Rust-Logging/src/: main.rs
01-Rust-Intro-Snippets-Points/: Cargo.toml  flamegraph.html
01-Rust-Intro-Snippets-Points/src/: main.rs
03-Number-Guess/: Cargo.toml
03-Number-Guess/src/: main.rs
03-Rust-Functions/Example-1/: Cargo.toml
03-Rust-Functions/Example-1/src/: main.rs
03-Rust-Functions/Example-2/src/: compute_paint.rs  lib.rs  main.rs
04-Points-Case-Study/: README.md
04-Points-Case-Study/Example-1/src/: lib.rs
04-Points-Case-Study/Example-2/src/: lib.rs
04-Points-Case-Study/Example-3/src/: lib.rs  point2d.rs
04-Points-Case-Study/Example-4/: Cargo.toml
04-Points-Case-Study/Example-4/rust-points/: Cargo.toml
04-Points-Case-Study/Example-4/simple_mesher/: Cargo.toml
04-Points-Case-Study/Example-5/: Cargo.toml
04-Points-Case-Study/Example-5/rust-points/: Cargo.toml
05-Rust-Errors/Example-1/: Cargo.toml
05-Rust-Errors/Example-2/: Cargo.toml
05-Rust-Errors/Example-3/: Cargo.toml
05-Rust-Errors/Example-7-Logger/: Cargo.toml
05-Rust-Errors/Example-9/: Cargo.toml
05-Rust-FileIO/Example-2/: students.txt
05-Rust-FileIO/Example-3/: Cargo.toml
05-Rust-FileIO/Example-6/: Cargo.toml
05-Rust-FileIO/Example-7/: Cargo.toml
05-Rust-FileIO/Example-7/src/: main.rs  roster.rs
05-Rust-Serde/Example-1/: Cargo.toml  rosters.toml
05-Rust-Serde/Example-2/: test.xml
05-Rust-Serde/Example-4/: rosters.txt
06-Rust-Shapes/: README.md
06-Rust-Shapes-Refactor/: .gitignore  README.md
06-Rust-Shapes-Refactor/Example-0/: Cargo.toml
06-Rust-Shapes-Refactor/Example-0/shapes/: Cargo.toml
06-Rust-Shapes-Refactor/Example-1/: Cargo.toml
06-Rust-Shapes-Refactor/Example-2/: Cargo.toml
06-Rust-Shapes-Refactor/Example-4/shapes/: Cargo.toml
06-Rust-Shapes-Refactor/Example-4/shapes/benches/: bench_errors.rs  bench_factory.rs  bench_factory_monoshape.rs  bench_parser.rs
06-Rust-Shapes-Refactor/Example-4/shapes/src/: factory.rs  parser.rs
06-Rust-Shapes-Refactor/Example-4/shapes/tests/: test_factory.rs
06-Rust-Shapes-Refactor/Example-5/: factory.json  monofactory.json
06-Rust-Shapes-Refactor/Example-6/: Cargo.toml
06-Rust-Shapes/Example-4/: inputShapes.txt
06-Rust-Shapes/Example-9/: Cargo.toml
06-Rust-Traits/Example-2/: Cargo.toml
06-Rust-Traits/Example-2/src/: lib.rs  main.rs  parser.rs  roster.rs
07-Rust-Builder-Pattern/Example-1/: Cargo.toml
07-Rust-Builder-Pattern/Example-3/: Cargo.toml
07-Rust-Builder-Pattern/Example-4/: Cargo.toml
07-Rust-Builder-Pattern/Example-6/: Cargo.toml
07-Rust-Builder-Pattern/Example-7/: Cargo.toml
07-Rust-Coin-Flip/: rayon-times.md  times.md
07-Rust-Coin-Flip/Example-3/: simulate.py
07-Rust-Coin-Flip/Example-3-Threads/: Makefile.toml
08-FFI-Shapes/: literally_everything.txt  really-big-input.txt
08-FFI-Shapes/Example-1/: Cargo.toml  Makefile.toml
08-FFI-Shapes/Example-2/: Makefile.toml
08-FFI-Shapes/Example-3/: Cargo.toml  Makefile.toml
08-FFI-Shapes/Example-5/: Makefile.toml
08-FFI-Shapes/Example-6/: .gitignore  Cargo.toml
08-FFI-Shapes/Example-6/shapes_lib/: Cargo.toml
08-FFI-Shapes/Example-9/: Cargo.toml  Makefile.toml  times.md
08-FFI-Shapes/Example-9/shapes_py/: Cargo.toml  create_shapes_file.py
08-FFI-Shapes/Example-9/shapes_py/benches/: bench_lib_py_parser.rs  bench_py_parser.rs  bench_shape_factory.py  bench_shape_parser.py
08-FFI-Shapes/Example-9/shapes_py/src/: circle.rs  collection.rs  error.rs  exception.rs  factory.rs  lib.rs  square.rs  triangle.rs
08-FFI-Shapes/Example-9/shapes_py/tests/shapes/: test_equilateral_triangle.py
08-Prime-Generation-Python-NumPy/: prime_bench.sh
08-Prime-Generation-Python-NumPy/Example-1-NumPy/: prime_number.py
08-Prime-Generation-Python-NumPy/Example-1-NumPy-Better-3/: prime_number.py
08-Prime-Generation-Python-NumPy/Example-4-NumPy-Sieve/: prime_number.py
08-Prime-Generation-Rust/: README.md
08-Prime-Generation-Rust/Example-1/: Makefile.toml  prime_number.py
14-Rust-Builder-Pattern/Example-5/: Cargo.toml
99-FFI-Shapes-Refactor/Example-3/: Cargo.toml
99-FFI-Shapes-Refactor/Example-4/: Makefile.toml  oopsAllErrors.txt
99-FFI-Shapes-Refactor/Example-6/: Cargo.toml
99-FFI-Shapes-Refactor/Example-6/shapes_lib_py/: Cargo.toml
99-FFI-Shapes-Refactor/Example-6/shapes_lib_py/benches/: bench_lib_py_factory.rs  bench_lib_py_parser.rs
99-FFI-Shapes-Refactor/Example-6/shapes_lib_py/src/: lib.rs
99-FFI-Shapes-Refactor/Example-7/: Makefile.toml
99-FFI-Shapes-Refactor/Example-7/shapes_py/: pyproject.toml
99-FFI-Shapes-Refactor/Example-7/shapes_py/shapes/: shape.py
99-Rust-Crate-uom/: README.md
Prime-Generation-Rust/Example-1/: Cargo.toml
Prime-Generation-Rust/Example-1/rust_prime_generation/: Cargo.toml
Prime-Generation-Rust/Example-1/rust_prime_generation/src/: lib.rs
(+339 files in other folders)
