[package]
name = "enroll_students"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
hamcrest2 = "0.3.0"
itertools = "0.14.0"
log = "0.4.31"
ron = "0.12.1"
rstest = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.150"
serde_toon = "0.2.0"
serde_yml = "0.0.13"
thiserror = "2.0.10"
toml = "1.1.2"
