[package]
name = "shapes"
version = "0.1.0"
authors = ["Thomas J. Kennedy <tkennedy@cs.odu.edu>"]
edition = "2024"

[dependencies]
itertools = "0.15.0"
thiserror = "2.0.18"


[dev-dependencies]
# criterion = "0.5.1"
divan = "0.1.17"
hamcrest2 = "*"
rstest = "0.26.1"

[[bench]]
name = "bench_factory"
harness = false

[[bench]]
name = "bench_parser"
harness = false

[[bench]]
name = "bench_factory_monoshape"
harness = false
