[package]
name = "shapes_lib_py"
version = "0.1.0"
edition = "2024"

[lib]
name="shapes_lib_py"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
log = "0.4.27"
ordered-float = "5.0.0"
pyo3-log = "0.12.3"
shapes_lib = { path = "../shapes_lib" }
thiserror = "2.0.12"

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module"]
