[package]
name = "rust-prime-generation"
version = "0.1.0"
edition = "2024"

[lib]
name="rust_prime_generation"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prime_generation = { path = "../prime_generation" }

[dependencies.pyo3]
version = "0.23.5"
features = ["extension-module"]
